--- a/笔记.md
+++ b/笔记.md
@@ -385,3 +385,149 @@ List的数据结构为快速链表quickList。
 Redis将链表和ziplist结合起来组成了quickList。也就是将多个ziplist使用双向指针串起来使用。这样既满足了快速的插入删除性能，又不会出现太大的空间冗余。
 
 ![List数据结构](./drawio/List/List列表数据结构.drawio.svg)
+
+## Set
+
+### Set简介
+
+Redis set对外提供的功能和List类似，是一个列表的功能，特殊之处在于set是可以自动排重的，当需要存储一个列表数据，又不希望出现重复数据时，set是一个很好的选择。
+并且，set提供了判断某个成员是否在一个集合内的重要接口，这个也是list所不能提供的。
+Redis的set是string类型的无序集合。它的底层其实是一个value为null的hash表，所以添加、删除、查找的复杂度都是O(1)。
+一个算法，随着数据的增加，执行时间的长短，如果是O(1)，数据增加，查找数据的时间不变。
+
+### Set常用命令
+
+1. **sadd \<key\> \<value1\> \<value2\ ...>** 将一个或多个member元素加入到集合key中，已经存在的member元素将被忽略。
+    示例：
+
+    ``` none
+    127.0.0.1:6379> sadd k1 v1 v2 v3 v5
+    4
+    ```
+
+2. **smembers \<key\>** 取出该集合的所有值。
+    示例：
+
+    ``` none
+    127.0.0.1:6379> smembers k1
+    v1
+    v3
+    v5
+    v2
+    ```
+
+3. **sismember \<key\> \<value\>** 判断集合\<key\>是否含有该\<value\>值，有1，没有0
+    示例：
+
+    ``` none
+    127.0.0.1:6379> sismember k1 v1
+    1
+    127.0.0.1:6379> sismember k1 v4
+    0
+    ```
+
+4. **scard \<key\>** 返回该集合的元素个数
+    示例：
+
+    ``` none
+    127.0.0.1:6379> scard k1
+    4
+    ```
+
+5. **srem \<key\> \<value1\> \<value2\> ...** 删除集合中的某个元素。
+    示例：
+
+    ``` none
+    127.0.0.1:6379> srem k1 v1
+    1
+    127.0.0.1:6379> smembers k1
+    v3
+    v5
+    v2
+    ```
+
+6. **spop \<key\> \<n\>** 从集合中随机吐出\<n\>个值
+    示例：
+
+    ``` none
+    127.0.0.1:6379> spop k1
+    v5
+    127.0.0.1:6379> spop k1
+    v3
+    127.0.0.1:6379> spop k1 3
+    v4
+    v1
+    v2
+    ```
+
+7. **srandmember \<key\> \<n\>** 从集合中随机取出\<n\>个值，并且值不会从集合中删除。
+    示例：
+
+    ``` none
+    127.0.0.1:6379> srandmember k1 2
+    v1
+    v2
+    127.0.0.1:6379> srandmember k1 2
+    v5
+    v2
+    ```
+
+8. **smove \<source\> \<destination\> \<value\>** 将集合中的一个值移动到另一个集合
+    示例：
+
+    ``` none
+    127.0.0.1:6379> smove k1 k2 v1
+    1
+    127.0.0.1:6379> smembers k1
+    v3
+    v4
+    v2
+    v5
+    127.0.0.1:6379> smembers k2
+    v1
+    ```
+
+9. **sinter \<key1\> \<key2\>** 返回两个集合的交集元素
+    示例：
+
+    ``` none
+    127.0.0.1:6379> smembers k1
+    v3
+    v2
+    v4
+    v5
+    127.0.0.1:6379> smembers k2
+    v1
+    v3
+    v2
+    127.0.0.1:6379> sinter k1 k2
+    v3
+    v2
+    ```
+
+10. **sunion \<key1\> \<key2\>**  返回两个集合的并集元素
+    示例：
+
+    ``` none
+    127.0.0.1:6379> sunion k1 k2
+    v1
+    v3
+    v2
+    v4
+    v5
+    ```
+
+11. **sdiff \<key1\> \<key2\>** 返回两个集合的差集元素(\<key1\>中存在但\<key2\>中不存在的元素)
+    示例：
+
+    ``` none
+    127.0.0.1:6379> sdiff k1 k2
+    v5
+    v4
+    127.0.0.1:6379> sdiff k2 k1
+    v1
+    ```
+
+### Set的数据结构
+
+Set数据结构是dict字典，字典是用哈希表实现的。
