学习了Hash数据类型

--- a/笔记.md
+++ b/笔记.md
@@ -531,3 +531,99 @@ Redis的set是string类型的无序集合。它的底层其实是一个value为n
 ### Set的数据结构
 
 Set数据结构是dict字典，字典是用哈希表实现的。
+
+## Hash
+
+### Hash简介
+
+Redis Hash是一个键值对集合。
+Redis Hash是一个string类型的field和value的映射表，hash特别适合用于存储对象。
+
+### Hash常用命令
+
+1. **hset \<key\> \<field\> \<value\>** 给\<\key\>集合中的\<field\>键赋值\<value\>
+    示例：
+
+    ``` none
+    127.0.0.1:6379> hset user:101 id 1
+    1
+    127.0.0.1:6379> hset user:101 name lily
+    1
+    127.0.0.1:6379> hset car id 2
+    1
+    127.0.0.1:6379> hset car name benz
+    1
+    ```
+
+2. **hget \<key\> \<field\>** 从\<key>集合中的\<field\>取出value
+    示例：
+
+    ``` none
+    127.0.0.1:6379> hget user:101 id
+    1
+    127.0.0.1:6379> hget user:101 name
+    lily
+    ```
+
+3. **hmset \<key\> \<field1\> \<value1\> \<field2\> \<value2\> ...** 批量设置hash的值。
+    示例：
+
+    ``` none
+    127.0.0.1:6379> hmset user:102 id 2 name jack age 18
+    OK
+    ```
+
+4. **hexists \<key\> \<field1\>** 查看哈希表\<key\>中，给定域\<field1\>是否存在。
+    示例：
+
+    ``` none
+    127.0.0.1:6379> hexists user:102 name
+    1
+    127.0.0.1:6379> hexists user:102 value
+    0
+    ```
+
+5. **hkeys \<key\>** 列出该hash集合的所有field。
+    示例：
+
+    ``` none
+    127.0.0.1:6379> hkeys user:102
+    id
+    name
+    age
+    ```
+
+6. **hvals \<key\>** 列出该hash集合的所有value。
+    示例：
+
+    ``` none
+    127.0.0.1:6379> hvals user:102
+    2
+    jack
+    18
+    ```
+
+7. **hincrby \<key\> \<field1\> \<increment\>** 为哈希表\<key\>中的域\<field\>的值加上增量\<increment\>
+    示例：
+
+    ``` none
+    127.0.0.1:6379> hincrby user:102 age 18
+    36
+    127.0.0.1:6379> hincrby user:102 age -12
+    24
+    ```
+
+8. **hsetnx \<key\> \<field1\> \<value\>** 将哈希表\<key\>中的域\<field\>的值设置为\<value\>，当且仅当域\<field\>不存在。
+    示例：
+
+    ``` none
+    127.0.0.1:6379> hsetnx user:101 age 16
+    1
+    127.0.0.1:6379> hsetnx user:101 age 16  //age已经存在，无法再次添加
+    0
+    ```
+
+### Hash的数据结构
+
+Hash类型对应的数据结构是两种：ziplist(压缩列表),hashtable(哈希表)。
+当field-value长度较短且个数较少时，使用ziplist，否则使用hashtable。
